<resources>
    <string name="app_name">ListUp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome_in_app">Benvenuto su ListUp</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Username non valido</string>
    <string name="invalid_password">La password deve essere >5</string>
    <string name="login_failed">"Login fallito"</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="register">Registrati</string>
    <string name="password_different">Password non coincidono</string>
    <string name="invalid_email">Email non valida</string>
    <string name="register_failed">Registrazione fallita</string>
    <string name="register_success">Registrazione effettuata con successo!</string>
    <string name="invalid_name">Nome non valido</string>
    <string name="invalid_surname">Cognome non valido</string>
    <string name="register_activity_name">Registrati\n</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_hint">Cerca con BarEasy</string>
    <string name="error_loading">Errore nel caricamento</string>
    <string name="foregrand">In primo piano su BarEasy</string>
    <string name="offer">In offerta su BarEasy</string>
    <string name="discounted">Scontato del </string>
    <string name="discounted_price">Prezzo scontato: </string>
    <string name="supplements">Supplementi</string>
    <string name="features">Carratteristiche</string>
    <string name="add_cart">Aggiungi al carrello</string>
    <string name="cart">Carrello</string>
    <string name="cart_pay">Compra</string>
    <string name="delete">Elimina</string>
    <string name="added_to_cart">Aggiunto al Carrello</string>
    <string name="checkout">Completa il pagamento</string>
    <string name="name_card">Nome del Titolare</string>
    <string name="date_card">Data di scadenza</string>
    <string name="cvv_card">CVV</string>
    <string name="numbers_card">Numero Carta</string>
    <string name="nome_lista">Nome Lista</string>
    <string name="proprietario">Proprietario</string>
    <string name="scegli_i_prodotti">🛒 Scegli i prodotti</string>
    <string name="prodotto_icon">Icon</string>
</resources>