<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.register.RegisterActivity">

    <include
        android:id="@+id/custom_toolbar_r"
        layout="@layout/toolbar_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/register_activity_name"
        android:textColor="@color/primary"
        android:textSize="34sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:outlineAmbientShadowColor="@color/primary"
        android:outlineSpotShadowColor="@color/primary"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidth="2dp"
        app:endIconDrawable="@drawable/ic_launcher_foreground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:outlineAmbientShadowColor="@color/primary"
            android:textColor="@color/primary"
            android:textColorHighlight="@color/primary"
            android:textColorHint="@color/on_background" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:outlineAmbientShadowColor="@color/primary"
        android:outlineSpotShadowColor="@color/primary"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidth="2dp"
        app:endIconDrawable="@drawable/ic_launcher_foreground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:outlineAmbientShadowColor="@color/primary"
            android:textColor="@color/primary"
            android:textColorHighlight="@color/primary"
            android:textColorHint="@color/on_background" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:outlineAmbientShadowColor="@color/primary"
        android:outlineSpotShadowColor="@color/primary"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidth="2dp"
        app:endIconDrawable="@drawable/ic_launcher_foreground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname"
            android:outlineAmbientShadowColor="@color/primary"
            android:textColor="@color/primary"
            android:textColorHighlight="@color/primary"
            android:textColorHint="@color/on_background" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:outlineAmbientShadowColor="@color/primary"
        android:outlineSpotShadowColor="@color/primary"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidth="2dp"
        app:endIconDrawable="@drawable/ic_launcher_foreground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:outlineAmbientShadowColor="@color/primary"
            android:textColor="@color/primary"
            android:textColorHighlight="@color/primary"
            android:textColorHint="@color/on_background" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/primary"
            android:textColorHint="@color/secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/primary"
            android:textColorHint="@color/secondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary"
        android:text="@string/register"
        android:textAllCaps="false" />

</LinearLayout>